--- a/index.html
+++ b/index.html
@@ -3,169 +3,131 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Page</title>
+    <title>UPSC Hub - Video Platform</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
         header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #333;
-            padding: 20px;
-        }
-
-        header .logo {
-            color: #fff;
+            background: #333;
+            color: white;
+            padding: 15px;
+            text-align: center;
             font-size: 24px;
-            font-weight: bold;
         }
-
-        header nav ul {
-            list-style: none;
+        .menu-bar {
             display: flex;
+            justify-content: space-around;
+            align-items: center;
+            background: #444;
+            color: white;
+            padding: 10px;
         }
-
-        header nav ul li {
-            margin-left: 20px;
+        .menu-bar button {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
-
-        header nav ul li a {
-            color: #fff;
-            text-decoration: none;
+        .menu-bar img {
+            width: 30px;
+            height: 30px;
+            margin-bottom: 5px;
         }
-
-        main {
+        .container {
+            display: none;
+            flex-wrap: wrap;
+            justify-content: center;
             padding: 20px;
+            flex-grow: 1;
         }
-
-        .video-player {
-            background-color: #fff;
-            padding: 20px;
+        .video-card {
+            background: white;
+            margin: 15px;
+            padding: 10px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .video-player h2 {
-            margin-top: 10px;
-        }
-
-        .video-player p {
-            color: #888;
-            font-size: 14px;
-        }
-
-        .video-player p span {
-            font-weight: bold;
-        }
-
-        .related-videos {
-            margin-top: 40px;
-        }
-
-        .related-videos h3 {
-            font-size: 20px;
-            margin-bottom: 20px;
-        }
-
-        .video-thumbnail {
-            display: flex;
-            gap: 20px;
-            flex-wrap: wrap;
-        }
-
-        .thumb {
-            width: 320px;
             text-align: center;
+            width: 300px;
         }
-
-        .thumb img {
+        .video-card video {
             width: 100%;
-            height: auto;
             border-radius: 8px;
         }
-
-        .thumb p {
-            margin-top: 10px;
-            font-size: 16px;
-        }
-
         footer {
+            background: #222;
+            color: white;
             text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: #fff;
+            padding: 8px;
+            font-size: 12px;
+            position: relative;
+            width: 100%;
         }
     </style>
+    <script>
+        function showPage(pageId) {
+            document.querySelectorAll('.container').forEach(container => container.style.display = 'none');
+            document.getElementById(pageId).style.display = 'flex';
+        }
+    </script>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <div class="logo">UPSChub</div>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Trending</a></li>
-                    <li><a href="#">Subscriptions</a></li>
-                    <li><a href="#">Library</a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <main>
-            <section class="video-player">
-                <div class="video">
-                    <video controls width="100%">
-                        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                    <h2>Sample Video Title</h2>
-                    <p>Posted by <span>Username</span> | 1M views | 1 day ago</p>
-                </div>
-            </section>
-
-            <section class="related-videos">
-                <h3>Related Videos</h3>
-                <div class="video-thumbnail">
-                    <div class="thumb">
-                        <img src="https://via.placeholder.com/320x180" alt="Video 1">
-                        <p>Video Title 1</p>
-                    </div>
-                    <div class="thumb">
-                        <img src="https://via.placeholder.com/320x180" alt="Video 2">
-                        <p>Video Title 2</p>
-                    </div>
-                    <div class="thumb">
-                        <img src="https://via.placeholder.com/320x180" alt="Video 3">
-                        <p>Video Title 3</p>
-                    </div>
-                    <div class="thumb">
-                        <img src="https://via.placeholder.com/320x180" alt="Video 4">
-                        <p>Video Title 4</p>
-                    </div>
-                </div>
-            </section>
-        </main>
-
-        <footer>
-            <p>&copy; 2025 UPSChub. All rights reserved.</p>
-        </footer>
+    <header>UPSC Hub - Video Platform</header>
+    <div id="home" class="container" style="display: flex;">
+        <p>Welcome to UPSC Hub!</p>
     </div>
+    <div id="videos" class="container">
+        <div class="video-card">
+            <video controls>
+                <source src="video1.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <p>UPSC Preparation Strategy</p>
+        </div>
+        <div class="video-card">
+            <video controls>
+                <source src="video2.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <p>Important Current Affairs</p>
+        </div>
+    </div>
+    <div id="saved" class="container">
+        <p>Saved Files will appear here.</p>
+    </div>
+    <div id="settings" class="container">
+        <p>Settings Page</p>
+    </div>
+    <div class="menu-bar">
+        <button onclick="showPage('home')">
+            <img src="home-icon.png" alt="Home">
+            Home
+        </button>
+        <button onclick="showPage('videos')">
+            <img src="video-icon.png" alt="Video Playlist">
+            Video Playlist
+        </button>
+        <button onclick="showPage('saved')">
+            <img src="saved-icon.png" alt="Saved Files">
+            Saved Files
+        </button>
+        <button onclick="showPage('settings')">
+            <img src="settings-icon.png" alt="Settings">
+            Settings
+        </button>
+    </div>
+    <footer>
+        <p>&copy; 2025 UPSC Hub</p>
+    </footer>
 </body>
 </html>
-
