--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
     <div class="menu-bar">
         <button onclick="showPage('home')">
-            <img src="home-icon.png" alt="Home">
+            <img src="images/home.jpg" alt="Home">
             Home
         </button>
         <button onclick="showPage('videos')">
