--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
     </div>
     <div id="saved" class="container">
-        <p>Saved Files will appear here.</p>
+        <p>Study oriented short videos will appear here.</p>
     </div>
     <div id="settings" class="container">
         <p>Settings Page</p>
@@ -131,15 +131,15 @@
             Home
         </button>
         <button onclick="showPage('videos')">
-            <img src="video-icon.png" alt="Video Playlist">
-            Video Playlist
+            <img src="images/Playlist.jpg" alt="Video Playlist">
+            Playlist
         </button>
         <button onclick="showPage('saved')">
-            <img src="saved-icon.png" alt="Saved Files">
-            Saved Files
+            <img src="images/shorts.jpg" alt="Saved Files">
+            Shorts
         </button>
         <button onclick="showPage('settings')">
-            <img src="settings-icon.png" alt="Settings">
+            <img src="images/settings.jpg" alt="Settings">
             Settings
         </button>
     </div>
