--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             align-items: center;
             padding: 80px 20px 80px;
             flex-grow: 1;
-            height: calc(100vh - 140px);
+            height: calc(100vh - 120px);
             overflow-y: auto;
         }
         .video-card {
@@ -58,9 +58,9 @@
             align-items: center;
             background: #444;
             color: white;
-            padding: 10px;
+            padding: 5px;
             position: fixed;
-            bottom: 30px;
+            bottom: 20px;
             width: 100%;
             z-index: 1000;
         }
@@ -68,22 +68,22 @@
             background: none;
             border: none;
             color: white;
-            font-size: 16px;
+            font-size: 14px;
             cursor: pointer;
             display: flex;
             flex-direction: column;
             align-items: center;
         }
         .menu-bar img {
-            width: 40px;
-            height: 40px;
-            margin-bottom: 5px;
+            width: 24px;
+            height: 24px;
+            margin-bottom: 3px;
         }
         footer {
             background: #222;
             color: white;
             text-align: center;
-            padding: 8px;
+            padding: 5px;
             font-size: 12px;
             position: fixed;
             bottom: 0;
@@ -120,26 +120,26 @@
         </div>
     </div>
     <div id="saved" class="container">
-        <p>Study oriented short videos will appear here.</p>
+        <p>Saved Files will appear here.</p>
     </div>
     <div id="settings" class="container">
         <p>Settings Page</p>
     </div>
     <div class="menu-bar">
         <button onclick="showPage('home')">
-            <img src="images/home.jpg" alt="Home">
+            <img src="home-icon.png" alt="Home">
             Home
         </button>
         <button onclick="showPage('videos')">
-            <img src="images/Playlist.jpg" alt="Video Playlist">
+            <img src="video-icon.png" alt="Video Playlist">
             Playlist
         </button>
         <button onclick="showPage('saved')">
-            <img src="images/shorts.jpg" alt="Saved Files">
+            <img src="saved-icon.png" alt="Saved Files">
             Shorts
         </button>
         <button onclick="showPage('settings')">
-            <img src="images/settings.jpg" alt="Settings">
+            <img src="settings-icon.png" alt="Settings">
             Settings
         </button>
     </div>
