--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@
     </div>
     <div class="menu-bar">
         <button onclick="showPage('home')">
-            <img src="home-icon.png" alt="Home">
+            <img src="images/home.jpg" alt="Home">
             Home
         </button>
         <button onclick="showPage('videos')">
-            <img src="video-icon.png" alt="Video Playlist">
+            <img src="images/Playlist.jpg" alt="Video Playlist">
             Playlist
         </button>
         <button onclick="showPage('saved')">
-            <img src="saved-icon.png" alt="Saved Files">
+            <img src="images/shorts.jpg" alt="Saved Files">
             Shorts
         </button>
         <button onclick="showPage('settings')">
-            <img src="settings-icon.png" alt="Settings">
+            <img src="images/settings.jpg" alt="Settings">
             Settings
         </button>
     </div>
