--- a/index.html
+++ b/index.html
@@ -153,19 +153,24 @@
         <p>Settings Page</p>
     </div>
     <div class="menu-bar">
+        
         <button onclick="showPage('home')">
+            <a href="home.html"></a>
             <img src="images/home.jpg" alt="Home">
             Home
         </button>
         <button onclick="showPage('videos')">
+            <a href="playlist.html"></a>
             <img src="images/Playlist.jpg" alt="Video Playlist">
             Playlist
         </button>
         <button onclick="showPage('saved')">
+            <a href="shorts.html"></a>
             <img src="images/shorts.jpg" alt="Saved Files">
             Shorts
         </button>
         <button onclick="showPage('settings')">
+            <a href="settings.html"></a>
             <img src="images/settings.jpg" alt="Settings">
             Settings
         </button>
