--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </div>
     <div class="menu-bar">
         
-        <button onclick="showPage('home.html')">
+        <button onclick="loadpage('home.html')">
             <img src="images/home.jpg" alt="Home">
             Home
         </button>
