--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <img src="images/Playlist.jpg" alt="Video Playlist">
             Playlist
         </button>
-        <button onclick="showPage('shorts.html')">
+        <button onclick="loadpage('shorts.html')">
             
             <img src="images/shorts.jpg" alt="Saved Files">
             Shorts
