--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div id="home" class="container" style="display: flex;">
         <p>Welcome to UPSC Hub!</p>
     </div>
-    <div id="videos" class="container">
+    <div id="playlist" class="container">
         <div class="video-card">
             <video controls>
                 <source src="video1.mp4" type="video/mp4">
@@ -146,8 +146,8 @@
             <p>Important Current Affairs</p>
         </div>
     </div>
-    <div id="saved" class="container">
-        <p>Saved Files will appear here.</p>
+    <div id="shorts" class="container">
+        <p> Shorts will appear here.</p>
     </div>
     <div id="settings" class="container">
         <p>Settings Page</p>
