--- a/index.html
+++ b/index.html
@@ -162,10 +162,30 @@
             <img src="images/Playlist.jpg" alt="Video Playlist">
             Playlist
         </button>
-        <button onclick="showPage('shorts')">
-            <img src="images/shorts.jpg" alt="Saved Files">
-            Shorts
-        </button>
+      
+
+        <!-- The "Shorts" Button -->
+<button onclick="loadShorts()">
+    <img src="images/shorts.jpg" alt="Saved Files">
+    Shorts
+</button>
+
+<!-- The Container Where Shorts Content Will Be Loaded -->
+<div id="shorts-container"></div>
+    
+<!--java script connect for the shorts page -->
+<script>
+    function loadShorts() {
+        fetch('shorts.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('shorts-container').innerHTML = data;
+        })
+        .catch(error => console.log("Error loading Shorts page:", error));
+    }
+</script>
+
+
         <button onclick="showPage('settings')">
             <img src="images/settings.jpg" alt="Settings">
             Settings
