--- a/shorts.html
+++ b/shorts.html
@@ -129,13 +129,64 @@
     <div class="runner-banner"><div>"Stay focused and keep learning! UPSC Hub is with you on this journey."</div></div>
     
     <main>
-        <section class="video-container">
-            <div class="video"><img src="https://via.placeholder.com/400x600" alt="Video 1"><p>Video Title 1</p></div>
-            <div class="video"><img src="https://via.placeholder.com/400x600" alt="Video 2"><p>Video Title 2</p></div>
-            <div class="video"><img src="https://via.placeholder.com/400x600" alt="Video 3"><p>Video Title 3</p></div>
-            <div class="video"><img src="https://via.placeholder.com/400x600" alt="Video 4"><p>Video Title 4</p></div>
-        </section>
-    </main>
+    <section class="video-container">
+        <div class="video">
+            <a href="https://www.youtube.com/shorts/l4e9TOV95AI?feature=share" target="_blank">
+                <img src="https://via.placeholder.com/400x600" alt="UPSC Motivation 1">
+                <p>UPSC Motivation Video 1</p>
+            </a>
+        </div>
+        <div class="video">
+            <a href="https://www.youtube.com/shorts/hyPADUTOOog?feature=share" target="_blank">
+                <img src="https://via.placeholder.com/400x600" alt="UPSC Motivation 2">
+                <p>UPSC Motivation Video 2</p>
+            </a>
+        </div>
+        <div class="video">
+            <a href="https://www.youtube.com/shorts/LXQ8ubi3ufs?feature=share" target="_blank">
+                <img src="https://via.placeholder.com/400x600" alt="UPSC Motivation 3">
+                <p>UPSC Motivation Video 3</p>
+            </a>
+        </div>
+        <div class="video">
+            <a href="https://www.youtube.com/shorts/akcn0MCbC3s?feature=share" target="_blank">
+                <img src="https://via.placeholder.com/400x600" alt="UPSC Motivation 4">
+                <p>UPSC Motivation Video 4</p>
+            </a>
+        </div>
+        <div class="video">
+            <a href="https://www.youtube.com/shorts/UPxMZ7WBofY?feature=share" target="_blank">
+                <img src="https://via.placeholder.com/400x600" alt="UPSC Study Tips 1">
+                <p>UPSC Study Tips Video 1</p>
+            </a>
+        </div>
+        <div class="video">
+            <a href="https://www.youtube.com/shorts/dhvURoR14kk?feature=share" target="_blank">
+                <img src="https://via.placeholder.com/400x600" alt="UPSC Study Tips 2">
+                <p>UPSC Study Tips Video 2</p>
+            </a>
+        </div>
+        <div class="video">
+            <a href="https://www.youtube.com/shorts/N3wZuMj_sYc?feature=share" target="_blank">
+                <img src="https://via.placeholder.com/400x600" alt="UPSC Study Tips 3">
+                <p>UPSC Study Tips Video 3</p>
+            </a>
+        </div>
+        <div class="video">
+            <a href="https://www.youtube.com/shorts/Ekt_5F7zUrk?feature=share" target="_blank">
+                <img src="https://via.placeholder.com/400x600" alt="UPSC Study Tips 4">
+                <p>UPSC Study Tips Video 4</p>
+            </a>
+        </div>
+        <div class="video">
+            <a href="https://www.youtube.com/shorts/Py1RaDD97NM?feature=share" target="_blank">
+                <img src="https://via.placeholder.com/400x600" alt="UPSC Motivation 5">
+                <p>UPSC Motivation Video 5</p>
+            </a>
+        </div>
+    </section>
+</main>
+
 
     
     <footer>
