--- a/shorts.html
+++ b/shorts.html
@@ -128,61 +128,43 @@
     <header>UPSC Hub - Video Platform</header>
     <div class="runner-banner"><div>"Stay focused and keep learning! UPSC Hub is with you on this journey."</div></div>
     
-    <main>
+<main>
     <section class="video-container">
         <div class="video">
-            <a href="https://www.youtube.com/shorts/l4e9TOV95AI?feature=share" target="_blank">
-                <img src="https://via.placeholder.com/400x600" alt="UPSC Motivation 1">
-                <p>UPSC Motivation Video 1</p>
-            </a>
+            <iframe width="400" height="600" src="https://www.youtube.com/embed/l4e9TOV95AI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Motivation Video 1</p>
         </div>
         <div class="video">
-            <a href="https://www.youtube.com/shorts/hyPADUTOOog?feature=share" target="_blank">
-                <img src="https://via.placeholder.com/400x600" alt="UPSC Motivation 2">
-                <p>UPSC Motivation Video 2</p>
-            </a>
+            <iframe width="400" height="600" src="https://www.youtube.com/embed/hyPADUTOOog" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Motivation Video 2</p>
         </div>
         <div class="video">
-            <a href="https://www.youtube.com/shorts/LXQ8ubi3ufs?feature=share" target="_blank">
-                <img src="https://via.placeholder.com/400x600" alt="UPSC Motivation 3">
-                <p>UPSC Motivation Video 3</p>
-            </a>
+            <iframe width="400" height="600" src="https://www.youtube.com/embed/LXQ8ubi3ufs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Motivation Video 3</p>
         </div>
         <div class="video">
-            <a href="https://www.youtube.com/shorts/akcn0MCbC3s?feature=share" target="_blank">
-                <img src="https://via.placeholder.com/400x600" alt="UPSC Motivation 4">
-                <p>UPSC Motivation Video 4</p>
-            </a>
+            <iframe width="400" height="600" src="https://www.youtube.com/embed/akcn0MCbC3s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Motivation Video 4</p>
         </div>
         <div class="video">
-            <a href="https://www.youtube.com/shorts/UPxMZ7WBofY?feature=share" target="_blank">
-                <img src="https://via.placeholder.com/400x600" alt="UPSC Study Tips 1">
-                <p>UPSC Study Tips Video 1</p>
-            </a>
+            <iframe width="400" height="600" src="https://www.youtube.com/embed/UPxMZ7WBofY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Study Tips Video 1</p>
         </div>
         <div class="video">
-            <a href="https://www.youtube.com/shorts/dhvURoR14kk?feature=share" target="_blank">
-                <img src="https://via.placeholder.com/400x600" alt="UPSC Study Tips 2">
-                <p>UPSC Study Tips Video 2</p>
-            </a>
+            <iframe width="400" height="600" src="https://www.youtube.com/embed/dhvURoR14kk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Study Tips Video 2</p>
         </div>
         <div class="video">
-            <a href="https://www.youtube.com/shorts/N3wZuMj_sYc?feature=share" target="_blank">
-                <img src="https://via.placeholder.com/400x600" alt="UPSC Study Tips 3">
-                <p>UPSC Study Tips Video 3</p>
-            </a>
+            <iframe width="400" height="600" src="https://www.youtube.com/embed/N3wZuMj_sYc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Study Tips Video 3</p>
         </div>
         <div class="video">
-            <a href="https://www.youtube.com/shorts/Ekt_5F7zUrk?feature=share" target="_blank">
-                <img src="https://via.placeholder.com/400x600" alt="UPSC Study Tips 4">
-                <p>UPSC Study Tips Video 4</p>
-            </a>
+            <iframe width="400" height="600" src="https://www.youtube.com/embed/Ekt_5F7zUrk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Study Tips Video 4</p>
         </div>
         <div class="video">
-            <a href="https://www.youtube.com/shorts/Py1RaDD97NM?feature=share" target="_blank">
-                <img src="https://via.placeholder.com/400x600" alt="UPSC Motivation 5">
-                <p>UPSC Motivation Video 5</p>
-            </a>
+            <iframe width="400" height="600" src="https://www.youtube.com/embed/Py1RaDD97NM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Motivation Video 5</p>
         </div>
     </section>
 </main>
