--- a/shorts.html
+++ b/shorts.html
@@ -56,25 +56,18 @@
             }
         }
         .video-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 100px 0;
-            overflow-y: auto;
-            height: calc(100vh - 140px);
-            scroll-snap-type: y mandatory;
-        }
-        .video {
-            width: 90%;
-            max-width: 400px;
-            margin-bottom: 10px;
-            scroll-snap-align: start;
-            background: white;
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-around;
+}
+
+.video {
+    width: 100%;
+    max-width: 600px;
+    position: relative;
+}
+        
         .video img {
             width: 100%;
             border-radius: 8px;
@@ -117,6 +110,17 @@
             width: 100%;
             z-index: 1000;
         }
+
+        iframe {
+    width: 100%;
+    height: 315px; /* You can adjust this value to fit the screen size */
+    border: none;
+}
+
+        @media (min-width: 768px) {
+    iframe {
+        height: 400px; /* Adjust for larger screens */
+    }
     </style>
     <script>
         function openPage(page) {
@@ -131,43 +135,44 @@
 <main>
     <section class="video-container">
         <div class="video">
-            <iframe width="400" height="600" src="https://www.youtube.com/embed/l4e9TOV95AI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/l4e9TOV95AI?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>UPSC Motivation Video 1</p>
         </div>
         <div class="video">
-            <iframe width="400" height="600" src="https://www.youtube.com/embed/hyPADUTOOog" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/hyPADUTOOog?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>UPSC Motivation Video 2</p>
         </div>
         <div class="video">
-            <iframe width="400" height="600" src="https://www.youtube.com/embed/LXQ8ubi3ufs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/LXQ8ubi3ufs?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>UPSC Motivation Video 3</p>
         </div>
         <div class="video">
-            <iframe width="400" height="600" src="https://www.youtube.com/embed/akcn0MCbC3s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/akcn0MCbC3s?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>UPSC Motivation Video 4</p>
         </div>
         <div class="video">
-            <iframe width="400" height="600" src="https://www.youtube.com/embed/UPxMZ7WBofY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/UPxMZ7WBofY?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>UPSC Study Tips Video 1</p>
         </div>
         <div class="video">
-            <iframe width="400" height="600" src="https://www.youtube.com/embed/dhvURoR14kk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/dhvURoR14kk?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>UPSC Study Tips Video 2</p>
         </div>
         <div class="video">
-            <iframe width="400" height="600" src="https://www.youtube.com/embed/N3wZuMj_sYc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/N3wZuMj_sYc?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>UPSC Study Tips Video 3</p>
         </div>
         <div class="video">
-            <iframe width="400" height="600" src="https://www.youtube.com/embed/Ekt_5F7zUrk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/Ekt_5F7zUrk?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>UPSC Study Tips Video 4</p>
         </div>
         <div class="video">
-            <iframe width="400" height="600" src="https://www.youtube.com/embed/Py1RaDD97NM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="https://www.youtube.com/embed/Py1RaDD97NM?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>UPSC Motivation Video 5</p>
         </div>
     </section>
 </main>
+
 
 
     
