--- a/shorts.html
+++ b/shorts.html
@@ -55,43 +55,36 @@
                 transform: translateX(-100%);
             }
         }
-        .video-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-around;
-}
-
-body, html {
+       body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    overflow: hidden; /* Prevent scrolling of the whole page */
 }
 
 .video-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
+    height: 100vh; /* Ensure the container spans the full viewport */
+    overflow-y: scroll; /* Enable vertical scrolling */
+    scroll-snap-type: y mandatory; /* Enable page scrolling */
+    scroll-behavior: smooth; /* Smooth scrolling between videos */
 }
 
 .video {
     width: 100%;
-    max-width: 1000px; /* Adjust max width of the video */
+    height: 100vh; /* Each video takes full viewport height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    scroll-snap-align: start; /* Ensure each video snaps into place */
     position: relative;
 }
 
 iframe {
     width: 100%;
-    height: 100vh; /* Full height of the viewport */
+    height: 100%;
     border: none;
-}
-
-video-container iframe {
-    /* Adjust height for single video */
-    height: calc(100vh - 60px); /* Assuming 60px for header/footer combined */
 }
 
 p {
@@ -103,6 +96,7 @@ p {
     color: white;
     padding: 10px;
 }
+
         .menu-bar {
             display: flex;
             justify-content: space-around;
