--- a/shorts.html
+++ b/shorts.html
@@ -75,7 +75,7 @@
 
         .video {
             width: 100%;
-            height: 100vh; /* Each video takes full viewport height */
+            height: 100vh; /* Ensure each video takes full screen height */
             display: flex;
             justify-content: center;
             align-items: center;
