--- a/shorts.html
+++ b/shorts.html
@@ -117,47 +117,47 @@
     <header>UPSC Hub - Video Platform</header>
     <div class="runner-banner"><div>"Stay focused and keep learning! UPSC Hub is with you on this journey."</div></div>
     
-    <main>
-        <section class="video-container">
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/l4e9TOV95AI?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>UPSC Motivation Video 1</p>
-            </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/hyPADUTOOog?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>UPSC Motivation Video 2</p>
-            </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/LXQ8ubi3ufs?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>UPSC Motivation Video 3</p>
-            </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/akcn0MCbC3s?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>UPSC Motivation Video 4</p>
-            </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/UPxMZ7WBofY?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>UPSC Study Tips Video 1</p>
-            </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/dhvURoR14kk?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>UPSC Study Tips Video 2</p>
-            </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/N3wZuMj_sYc?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>UPSC Study Tips Video 3</p>
-            </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/Ekt_5F7zUrk?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>UPSC Study Tips Video 4</p>
-            </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/Py1RaDD97NM?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <p>UPSC Motivation Video 5</p>
-            </div>
-        </section>
-    </main>
-    
+<main>
+    <section class="video-container">
+        <div class="video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/l4e9TOV95AI?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Motivation Video 1</p>
+        </div>
+        <div class="video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hyPADUTOOog?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Motivation Video 2</p>
+        </div>
+        <div class="video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/LXQ8ubi3ufs?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Motivation Video 3</p>
+        </div>
+        <div class="video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/akcn0MCbC3s?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Motivation Video 4</p>
+        </div>
+        <div class="video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UPxMZ7WBofY?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Study Tips Video 1</p>
+        </div>
+        <div class="video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dhvURoR14kk?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Study Tips Video 2</p>
+        </div>
+        <div class="video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/N3wZuMj_sYc?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Study Tips Video 3</p>
+        </div>
+        <div class="video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Ekt_5F7zUrk?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Study Tips Video 4</p>
+        </div>
+        <div class="video">
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Py1RaDD97NM?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>UPSC Motivation Video 5</p>
+        </div>
+    </section>
+</main>
+
     <footer>
         <p>&copy; 2025 UPSC Hub</p>
     </footer>
