--- a/index.html
+++ b/index.html
@@ -158,6 +158,12 @@
             <img src="images/home.jpg" alt="Home">
             Home
         </button>
+
+        <script>
+            function openShorts() {
+                window.location.href = 'home.html'; // Redirects to home.html
+            }
+        </script>
         <button onclick="showPage('playlist')">
             <img src="images/Playlist.jpg" alt="Video Playlist">
             Playlist
