--- a/index.html
+++ b/index.html
@@ -154,16 +154,11 @@
     </div>
     <div class="menu-bar">
         
-        <button onclick="showPage('home')">
-            <img src="images/home.jpg" alt="Home">
-            Home
+        <button onclick="window.location.href='home.html'">
+    <img src="images/home.jpg" alt="Home">
+    Home
         </button>
 
-        <script>
-            function openShorts() {
-                window.location.href = 'home.html'; // Redirects to home.html
-            }
-        </script>
         <button onclick="showPage('playlist')">
             <img src="images/Playlist.jpg" alt="Video Playlist">
             Playlist
