--- a/home.html
+++ b/home.html
@@ -9,14 +9,29 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
+            width: 80%;
+            max-width: 1200px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
         }
 
         header {
             display: flex;
             align-items: center;
-            background-color: #f9f9f9;
+            background-color: #ff0000;
+            color: white;
             padding: 10px 20px;
-            border-bottom: 1px solid #ccc;
+            border-bottom: 2px solid #ccc;
         }
 
         .logo {
@@ -28,7 +43,7 @@
         .search-bar {
             flex: 1;
             padding: 10px;
-            border: 1px solid #ccc;
+            border: none;
             border-radius: 4px;
         }
 
@@ -37,37 +52,14 @@
             padding: 10px;
             background-color: #e0e0e0;
             border-radius: 50%;
+            color: #333;
         }
 
-        .container {
-            display: flex;
-        }
-
-        .sidebar {
-            width: 200px;
-            background-color: #f1f1f1;
+        main {
             padding: 20px;
-        }
-
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .sidebar li {
-            padding: 10px 0;
-            cursor: pointer;
-        }
-
-        .sidebar li:hover {
-            background-color: #ddd;
-        }
-
-        .video-feed {
-            flex: 1;
             display: flex;
             flex-wrap: wrap;
-            padding: 20px;
+            justify-content: space-between;
         }
 
         .video-card {
@@ -77,6 +69,7 @@
             border-radius: 4px;
             overflow: hidden;
             background-color: #fff;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .video-card img {
@@ -86,30 +79,64 @@
         .video-card h3 {
             font-size: 18px;
             margin: 10px;
+            color: #333;
         }
 
         .video-card p {
             margin: 0 10px 10px;
             color: #555;
         }
+
+        .button-container {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .button-container a {
+            display: inline-block;
+            background-color: #ff0000;
+            color: white;
+            padding: 10px 20px;
+            margin: 5px;
+            border-radius: 4px;
+            text-decoration: none;
+            transition: background-color 0.3s;
+        }
+
+        .button-container a:hover {
+            background-color: #cc0000;
+        }
+
+        footer {
+            background-color: #ff0000;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        .footer-links {
+            margin: 10px 0;
+        }
+
+        .footer-links a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+
+        .footer-links a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
-    <header>
-        <div class="logo">YouTube</div>
-        <input type="text" class="search-bar" placeholder="Search">
-        <div class="user-icon">User </div>
-    </header>
     <div class="container">
-        <aside class="sidebar">
-            <ul>
-                <li>Home</li>
-                <li>Trending</li>
-                <li>Subscriptions</li>
-                <li>Library</li>
-            </ul>
-        </aside>
-        <main class="video-feed">
+        <header>
+            <div class="logo">YouTube</div>
+            <input type="text" class="search-bar" placeholder="Search">
+            <div class="user-icon">User </div>
+        </header>
+        <main>
             <div class="video-card">
                 <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
                 <h3>Video Title 1</h3>
@@ -124,15 +151,51 @@
                 <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
                 <h3>Video Title 3</h3>
                 <p>Channel Name</p>
-            </div>
+            </div
+
+                        </div>
             <div class="video-card">
                 <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
                 <h3>Video Title 4</h3>
                 <p>Channel Name</p>
             </div>
-            <!-- Add more video cards as needed -->
+            <div class="video-card">
+                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
+                <h3>Video Title 5</h3>
+                <p>Channel Name</p>
+            </div>
+            <div class="video-card">
+                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
+                <h3>Video Title 6</h3>
+                <p>Channel Name</p>
+            </div>
+            <div class="video-card">
+                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
+                <h3>Video Title 7</h3>
+                <p>Channel Name</p>
+            </div>
+            <div class="video-card">
+                <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
+                <h3>Video Title 8</h3>
+                <p>Channel Name</p>
+            </div>
         </main>
+        <div class="button-container">
+            <a href="#">Page 1</a>
+            <a href="#">Page 2</a>
+            <a href="#">Page 3</a>
+            <a href="#">Page 4</a>
+            <a href="#">Page 5</a>
+        </div>
+        <footer>
+            <div class="footer-links">
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms of Service</a>
+            </div>
+            <p>&copy; 2023 YouTube Clone. All rights reserved.</p>
+        </footer>
     </div>
 </body>
 </html>
-
