--- a/home.html
+++ b/home.html
@@ -11,18 +11,8 @@
             padding: 0;
             background-color: #f0f0f0;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: column;
             height: 100vh;
-        }
-
-        .container {
-            width: 80%;
-            max-width: 1200px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
         }
 
         header {
@@ -55,11 +45,20 @@
             color: #333;
         }
 
-        main {
+        .container {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             padding: 20px;
+        }
+
+        main {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: center;
+            margin-bottom: 20px;
         }
 
         .video-card {
@@ -130,12 +129,12 @@
     </style>
 </head>
 <body>
+    <header>
+        <div class="logo">YouTube</div>
+        <input type="text" class="search-bar" placeholder="Search">
+        <div class="user-icon">User </div>
+    </header>
     <div class="container">
-        <header>
-            <div class="logo">YouTube</div>
-            <input type="text" class="search-bar" placeholder="Search">
-            <div class="user-icon">User </div>
-        </header>
         <main>
             <div class="video-card">
                 <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
@@ -151,12 +150,10 @@
                 <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
                 <h3>Video Title 3</h3>
                 <p>Channel Name</p>
-            </div
-
-                        </div>
+            </div>
             <div class="video-card">
                 <img src="https://via.placeholder.com/300x200" alt="Video Thumbnail">
-                <h3>Video Title 4</h3>
+                                <h3>Video Title 4</h3>
                 <p>Channel Name</p>
             </div>
             <div class="video-card">
