--- a/home.html
+++ b/home.html
@@ -130,7 +130,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">YouTube</div>
+        <div class="logo">UPSCvideo HUB</div>
         <input type="text" class="search-bar" placeholder="Search">
         <div class="user-icon">User </div>
     </header>
