--- a/shorts.html
+++ b/shorts.html
@@ -19,6 +19,21 @@
             overflow-y: scroll;
             scroll-snap-type: y mandatory;
         }
+        header, footer {
+            padding: 10px;
+            background: #222;
+            color: white;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
+        }
+        header {
+            top: 0;
+        }
+        footer {
+            bottom: 0;
+        }
         .video-container {
             width: 100%;
             height: 100vh;
@@ -26,6 +41,7 @@
             align-items: center;
             justify-content: center;
             scroll-snap-align: start;
+            flex-shrink: 0;
         }
         iframe {
             width: 100%;
@@ -40,7 +56,7 @@
             color: white;
             padding: 5px;
             position: fixed;
-            bottom: 0;
+            bottom: 40px;
             width: 100%;
             z-index: 1000;
         }
@@ -70,6 +86,7 @@
     </style>
 </head>
 <body>
+    <header>UPSChub Video</header>
     <div class="video-container"><iframe src="https://www.youtube.com/embed/shorts/pQjIpkzNTEY" allowfullscreen></iframe></div>
     <div class="video-container"><iframe src="https://www.youtube.com/embed/shorts/eU13jvC8_sI" allowfullscreen></iframe></div>
     <div class="video-container"><iframe src="https://www.youtube.com/embed/shorts/VIDEO_ID3" allowfullscreen></iframe></div>
@@ -93,5 +110,6 @@
             Settings
         </button>
     </div>
+    <footer>&copy; 2025 UPSChub</footer>
 </body>
 </html>
